objects/Engineer_Checklist__c/fields/Invoice_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_To__c</fullName>
    <formula>IF(Site__r.Invoice_Email_To__c &lt;&gt; &quot;&quot;, Site__r.Invoice_Email_To__c, Site__r.Parent.Invoice_Email_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email To</label>
    <type>Text</type>
</CustomField>