objects/Engineer_Checklist__c/fields/Invoice_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To__c</fullName>
    <formula>Site__r.Site_Invoice_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice To :</label>
    <type>Text</type>
</CustomField>