objects/Engineer_Checklist__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <formula>IF(Linked_SS_Count__c&gt;0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>