objects/Engineer_Checklist__c/fields/Job_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Job_Time_Hours__c</fullName>
    <formula>(floor((End_Date_and_Time__c - Start_Date_and_Time__c)*24)) 
+ 
(((((End_Date_and_Time__c - Start_Date_and_Time__c)*24)-floor((End_Date_and_Time__c - Start_Date_and_Time__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>