objects/Engineer_Checklist__c/fields/JobUUID__c.field-meta.xml
<CustomField>
    <fullName>JobUUID__c</fullName>
    <formula>Visit__r.UUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JobUUID</label>
    <type>Text</type>
</CustomField>