objects/Engineer_Checklist__c/fields/Lamp_operation_stability__c.field-meta.xml
<CustomField>
    <fullName>Lamp_operation_stability__c</fullName>
    <label>Lamp operation/stability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>