objects/Engineer_Checklist__c/fields/Leaks__c.field-meta.xml
<CustomField>
    <fullName>Leaks__c</fullName>
    <label>Leaks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>