objects/Engineer_Checklist__c/fields/Length_mm__c.field-meta.xml
<CustomField>
    <fullName>Length_mm__c</fullName>
    <label>Length mm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>