objects/Engineer_Checklist__c/fields/Linked_SS_Count__c.field-meta.xml
<CustomField>
    <fullName>Linked_SS_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Linked SS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>