objects/Engineer_Checklist__c/fields/Location_suitably_ventilated__c.field-meta.xml
<CustomField>
    <fullName>Location_suitably_ventilated__c</fullName>
    <label>Location suitably ventilated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>