objects/Engineer_Checklist__c/fields/Loop_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>Loop_Monitoring_Qty__c</fullName>
    <label>Loop Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>