objects/Engineer_Checklist__c/fields/Lower_edge_door_seal__c.field-meta.xml
<CustomField>
    <fullName>Lower_edge_door_seal__c</fullName>
    <label>Lower edge door seal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>