objects/Engineer_Checklist__c/fields/Lubrication_of_rollers__c.field-meta.xml
<CustomField>
    <fullName>Lubrication_of_rollers__c</fullName>
    <label>Lubrication Of Rollers</label>
    <length>250</length>
    <type>Text</type>
</CustomField>