objects/Engineer_Checklist__c/fields/Mains_On_indicator__c.field-meta.xml
<CustomField>
    <fullName>Mains_On_indicator__c</fullName>
    <label>&apos;Mains On&apos; indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>