objects/Engineer_Checklist__c/fields/Mains_water_regulator_pressure__c.field-meta.xml
<CustomField>
    <fullName>Mains_water_regulator_pressure__c</fullName>
    <label>Pressure water regulator set at(Bar)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>