objects/Engineer_Checklist__c/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <label>Manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>