objects/Engineer_Checklist__c/fields/Mechanic_No__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_No__c</fullName>
    <label>Mechanic No</label>
    <type>TextArea</type>
</CustomField>