objects/Engineer_Checklist__c/fields/Mechanical_inspection_of_arms_and_joints__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_inspection_of_arms_and_joints__c</fullName>
    <label>Mechanical inspection of arms &amp; joints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>