objects/Engineer_Checklist__c/fields/Movement_Functions__c.field-meta.xml
<CustomField>
    <fullName>Movement_Functions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Movement Functions</label>
    <type>Checkbox</type>
</CustomField>