objects/Engineer_Checklist__c/fields/Name_of_person_given_user_training__c.field-meta.xml
<CustomField>
    <fullName>Name_of_person_given_user_training__c</fullName>
    <inlineHelpText>Name of person given user training and manuals:</inlineHelpText>
    <label>Name of person given user training</label>
    <type>TextArea</type>
</CustomField>