objects/Engineer_Checklist__c/fields/Natural_Light_Extra_Light__c.field-meta.xml
<CustomField>
    <fullName>Natural_Light_Extra_Light__c</fullName>
    <label>Natural Light/Extra Light</label>
    <length>30</length>
    <type>Text</type>
</CustomField>