objects/Engineer_Checklist__c/fields/Network_configuration_parameters__c.field-meta.xml
<CustomField>
    <fullName>Network_configuration_parameters__c</fullName>
    <label>Network Configuration Parameters</label>
    <length>250</length>
    <type>Text</type>
</CustomField>