objects/Engineer_Checklist__c/fields/Next_Service_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Due_Date__c</fullName>
    <label>Next Service Due</label>
    <type>Date</type>
</CustomField>