objects/Engineer_Checklist__c/fields/Normal__c.field-meta.xml
<CustomField>
    <fullName>Normal__c</fullName>
    <label>Normal</label>
    <type>TextArea</type>
</CustomField>