objects/Engineer_Checklist__c/fields/Notes_for_next_service__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_next_service__c</fullName>
    <label>Notes for next service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>