objects/Engineer_Checklist__c/fields/NSD__c.field-meta.xml
<CustomField>
    <fullName>NSD__c</fullName>
    <inlineHelpText>Please only enter a date here if you know that you need to be at the Site before the next visit Service frequency.</inlineHelpText>
    <label>Next Service</label>
    <type>Date</type>
</CustomField>