objects/Engineer_Checklist__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>HCL-{0000000}</displayFormat>
    <inlineHelpText>Checklist Number, generated for all checklists</inlineHelpText>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>