objects/Engineer_Checklist__c/fields/Number_of_Surgeries_Running__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Surgeries_Running__c</fullName>
    <label>Number of Surgeries Running</label>
    <length>255</length>
    <type>Text</type>
</CustomField>