objects/Engineer_Checklist__c/fields/Number_of_vessels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vessels__c</fullName>
    <label>Number of vessels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>