objects/Engineer_Checklist__c/fields/O_C_Zone_Monitoring_Qty__c.field-meta.xml
<CustomField>
    <fullName>O_C_Zone_Monitoring_Qty__c</fullName>
    <inlineHelpText>Quantity</inlineHelpText>
    <label>O/C Zone Monitoring Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>