objects/Engineer_Checklist__c/fields/Off_bar__c.field-meta.xml
<CustomField>
    <fullName>Off_bar__c</fullName>
    <inlineHelpText>Pressure</inlineHelpText>
    <label>Off(bar)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>