objects/Engineer_Checklist__c/fields/On_bar__c.field-meta.xml
<CustomField>
    <fullName>On_bar__c</fullName>
    <inlineHelpText>Pressure</inlineHelpText>
    <label>On(Bar)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>