objects/Engineer_Checklist__c/fields/Operator_Panel_Circuit_Board_Protector__c.field-meta.xml
<CustomField>
    <fullName>Operator_Panel_Circuit_Board_Protector__c</fullName>
    <label>Operator Panel Circuit Board Protector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>