objects/Engineer_Checklist__c/fields/Order_Number2__c.field-meta.xml
<CustomField>
    <fullName>Order_Number2__c</fullName>
    <formula>Visit__r.Current_Purchase_Order_No__c + Visit__r.Beta_Service_Visit_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Order Number on the visit if there is one. It will be copied automatically into the Purchase Order Number field.</inlineHelpText>
    <label>Visit Order Number</label>
    <type>Text</type>
</CustomField>