objects/Engineer_Checklist__c/fields/Other_observations__c.field-meta.xml
<CustomField>
    <fullName>Other_observations__c</fullName>
    <label>Other observations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>