objects/Engineer_Checklist__c/fields/Other_workers_Present__c.field-meta.xml
<CustomField>
    <fullName>Other_workers_Present__c</fullName>
    <label>Other workers Present?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>