objects/Engineer_Checklist__c/fields/Out_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Hours</label>
    <type>Checkbox</type>
</CustomField>