objects/Engineer_Checklist__c/fields/Outlet_has_sufficient_air_water_pressure__c.field-meta.xml
<CustomField>
    <fullName>Outlet_has_sufficient_air_water_pressure__c</fullName>
    <inlineHelpText>Each Outlet has sufficient air&amp;water pressure</inlineHelpText>
    <label>Each Outlet has sufficient air&amp;water</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>