objects/Engineer_Checklist__c/fields/Outputs_Reinstated__c.field-meta.xml
<CustomField>
    <fullName>Outputs_Reinstated__c</fullName>
    <label>Outputs Reinstated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>