objects/Engineer_Checklist__c/fields/P_I_Calibration_and_Seal__c.field-meta.xml
<CustomField>
    <fullName>P_I_Calibration_and_Seal__c</fullName>
    <label>P.I Calibration and Seal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>