objects/Engineer_Checklist__c/fields/Panel_Status_Photo_Attached__c.field-meta.xml
<CustomField>
    <fullName>Panel_Status_Photo_Attached__c</fullName>
    <inlineHelpText>Please save this service sheet, take a photo of the panel to show the status that you are going to leave it in, make &amp; manufacture, and attach to Notes &amp; Attachments.</inlineHelpText>
    <label>Panel Status Photo Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>