objects/Engineer_Checklist__c/fields/Panic_Button_Qty__c.field-meta.xml
<CustomField>
    <fullName>Panic_Button_Qty__c</fullName>
    <label>Panic Button Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>