objects/Engineer_Checklist__c/fields/Parking_Costs__c.field-meta.xml
<CustomField>
    <fullName>Parking_Costs__c</fullName>
    <inlineHelpText>Please enter the amount of the Parking paid in total that relates to this service sheet. This adds product PSC_4000 to the opportunity</inlineHelpText>
    <label>Parking Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>