objects/Engineer_Checklist__c/fields/per_Month_Order__c.field-meta.xml
<CustomField>
    <fullName>per_Month_Order__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
   1, 1.00,
   2, 2.00,
   3, 3.00,
   4, 4.00,
   5, 5.00,
   6, 6.00,
   7, 7.00,
   8, 8.00,
   9, 9.00,
   10, 10.00,
   11, 11.00,
   12, 12.00,
   0.00
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>per Month Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>