objects/Engineer_Checklist__c/fields/Photos_uploaded_or_sent_to_office__c.field-meta.xml
<CustomField>
    <fullName>Photos_uploaded_or_sent_to_office__c</fullName>
    <label>Photos uploaded or sent to office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>