objects/Engineer_Checklist__c/fields/Pipework_Condition__c.field-meta.xml
<CustomField>
    <fullName>Pipework_Condition__c</fullName>
    <label>Condition of pipework connected to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>