objects/Engineer_Checklist__c/fields/PIRsp_Qty__c.field-meta.xml
<CustomField>
    <fullName>PIRsp_Qty__c</fullName>
    <label>PIR Qty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range Up To 100m</fullName>
            </value>
            <value>
                <fullName>Range above 100m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>