objects/Engineer_Checklist__c/fields/PIRsp_Qty_Archived__c.field-meta.xml
<CustomField>
    <fullName>PIRsp_Qty_Archived__c</fullName>
    <label>PIR Qty(Archived)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>