objects/Engineer_Checklist__c/fields/Pit_Depth__c.field-meta.xml
<CustomField>
    <fullName>Pit_Depth__c</fullName>
    <label>Pit Depth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>