objects/Engineer_Checklist__c/fields/Place_Valve__c.field-meta.xml
<CustomField>
    <fullName>Place_Valve__c</fullName>
    <label>Place Valve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>