objects/Engineer_Checklist__c/fields/Position_on_level_ground__c.field-meta.xml
<CustomField>
    <fullName>Position_on_level_ground__c</fullName>
    <label>Position on level ground</label>
    <length>30</length>
    <type>Text</type>
</CustomField>