objects/Engineer_Checklist__c/fields/PR_valve_function_test__c.field-meta.xml
<CustomField>
    <fullName>PR_valve_function_test__c</fullName>
    <label>PR valve function test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>