objects/Engineer_Checklist__c/fields/PRESSURE__c.field-meta.xml
<CustomField>
    <fullName>PRESSURE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRESSURE</label>
    <type>Checkbox</type>
</CustomField>