objects/Engineer_Checklist__c/fields/Pressure_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Gauge__c</fullName>
    <label>Pressure Gauge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>