objects/Engineer_Checklist__c/fields/Pressure_Switch__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Switch__c</fullName>
    <label>Pressure Switch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>