objects/Engineer_Checklist__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <formula>IF( Site_Contract__r.Price_Book__r.Name &lt;&gt; &apos;&apos; , Site_Contract__r.Price_Book__r.Name , Site__r.Price_Book__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book</label>
    <type>Text</type>
</CustomField>