objects/Engineer_Checklist__c/fields/Price_Book_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Check__c</fullName>
    <formula>IF ( AND (
Site__r.Price_Book_Indicator__c = &quot;&quot;, 
Site__r.Parent.Price_Book_Indicator__c = &quot;&quot; ),&quot;WARNING - NO PRICE BOOK ON SITE OR CUSTOMER&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Check</label>
    <type>Text</type>
</CustomField>