objects/Engineer_Checklist__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Sheets</relationshipLabel>
    <relationshipName>Service_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>