objects/Engineer_Checklist__c/fields/Progress_report__c.field-meta.xml
<CustomField>
    <fullName>Progress_report__c</fullName>
    <label>Progress report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>