objects/Engineer_Checklist__c/fields/Protective_devices__c.field-meta.xml
<CustomField>
    <fullName>Protective_devices__c</fullName>
    <label>Protective devices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>