objects/Engineer_Checklist__c/fields/Proxi_Readers_Qty__c.field-meta.xml
<CustomField>
    <fullName>Proxi_Readers_Qty__c</fullName>
    <label>Proxi Readers Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>