objects/Engineer_Checklist__c/fields/Pump_1__c.field-meta.xml
<CustomField>
    <fullName>Pump_1__c</fullName>
    <label>Pump 1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>