objects/Engineer_Checklist__c/fields/Pump_2__c.field-meta.xml
<CustomField>
    <fullName>Pump_2__c</fullName>
    <label>Pump 2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>