objects/Engineer_Checklist__c/fields/Pump_Condition__c.field-meta.xml
<CustomField>
    <fullName>Pump_Condition__c</fullName>
    <label>Pump Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Dead/Dangerous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>